--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container">
-        <img id="yingying-monster" src="monster.png" alt="一只可爱的嘤嘤怪">
+        <img id="yingying-monster" src="monster_1.png" alt="一只可爱的嘤嘤怪">
     </div>
 
     <script src="script.js"></script>
